ft: fixed signup and login with password issues
